# Graph-NK

./: .gitignore  AGENTS.md  BUILD_SPEC.md  CHANGELOG(1).md  CHANGELOG(2).md  CHANGELOG.md  Dockerfile  FRAMEWORK_DESIGN.md  Graph-NK.code-workspace  README.md  broker.py  docker-compose.yml  docker-compose_new.yml  progress.py  pyproject.toml  requirements.txt  settings.py  settings_new.py  storage.py
annotators/: base.py  classifier.py  lexical.py  morpho_syntactic.py  rhetorical.py  word_formation.py  worker.py  worker_old.py
enrichment/: email_threading.py  reference_extractor.py
extractor/: text_unit_extractor.py  worker.py  worker_old.py
lexicons/: en_core_v0.1.yml  en_core_v0.2.yml
miner/: async_miner.py  gmane_ingester.py
notebooks/: 01_descriptive.ipynb  01_descriptive_old.ipynb  02_rq_analysis.ipynb  rq4_cluster_exemplars.csv  rq5_marker_neg_clf_pos.csv  rq5_marker_pos_clf_neg.csv  rq5_rule_precision_sample.csv
ontology/: ontology.cypher  ontology_old.cypher  schema.yml
patterns/: morpho_syntactic_v0.1.yml  morpho_syntactic_v0.2.yml  rhetorical_v0.1.yml  rhetorical_v0.2.yml  word_formation_v0.1.yml  word_formation_v0.2.yml
projector/: graph_projector.py  graph_projector_old.py  worker.py  worker_old.py
rules/: broker_new.py  categories.yml
scripts/: diagnose_email_spans.py  mine_one.py  run_pipeline.py  setup_neo4j.sh
tests/: conftest.py  test_annotators.py  test_email_integration.py  test_gmane_ingester.py  test_word_formation_rules.py
