[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-nk"
version = "0.1.0"
description = "Research pipeline for studying Non-Knowledge in GitHub repositories"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "motor>=3.6",
    "redis>=5.2",
    "neo4j>=5.20",
    "spacy>=3.7,<4",
    "torch>=2.3",
    "transformers>=4.44",
    "pyyaml>=6.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "fasttext-langdetect>=1.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
notebooks = ["jupyterlab", "pandas", "matplotlib", "seaborn", "networkx"]
dev = ["ruff>=0.6", "pytest>=8", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
